working version with saving

--- a/save.ini
+++ b/save.ini
@@ -1,10 +1,6 @@
 [General]
-$totalFrankingCredits=
-$currentMoney=1000
-$pendingDivPayments=Code|Pay Date|Payment amount
-DCK|2016/01/01|500
-BCG|2016/03/01|100
-$divPaymentHistory=
-$holdings=Code|Number of Stocks
-CBA|1000
-RIO|50
+$totalFrankingCredits=1130.44428571429
+$currentMoney=480
+$pendingDivPayments=[["Code","Pay Date","Payment amount"],["BCA","2016/12/12",16.8]]
+$divPaymentHistory=[["Code","Date","Payment amount"]]
+$holdings=[["Code","Number of Stocks"]]
