made much better

--- a/save.ini
+++ b/save.ini
@@ -1,6 +1,7 @@
 [General]
-$totalFrankingCredits=1130.44428571429
-$currentMoney=480
-$pendingDivPayments=[["Code","Pay Date","Payment amount"],["BCA","2016/12/12",16.8]]
-$divPaymentHistory=[["Code","Date","Payment amount"]]
-$holdings=[["Code","Number of Stocks"]]
+$totalFrankingCredits=1138.89571428572
+$currentMoney=-13563.64
+$pendingDivPayments=[["Code","Pay Date","Payment amount"],["BCA","2016/12/12",16.8],["DDD","2015/12/13",0],["ABC ","2016/12/31",12],["BBB","2015/12/12",0]]
+$divPaymentHistory=[["Code","Date","Payment amount"],["DDD","2015/12/13",4],["BBB","2015/12/12",12.36]]
+$holdings=[["Code","Number of Stocks"],["ABC ","100"]]
+$history=[["Date","Type","Details"],["2016/03/11","Buy","Code: ABC  Num Shares: 100 Price: 10 Franking: 43 Dividend: 12"],["2016/03/11","Buy","Code: BBB Num Shares: 103 Price($): 123 Franking(%): 100 Dividend(CPS): 12"],["2016/03/11","Sell","Code: BBB Price($): 1"]]
