--- a/save.ini
+++ b/save.ini
@@ -1,7 +1,7 @@
 [General]
-$totalFrankingCredits=1138.89571428572
-$currentMoney=4000
-$pendingDivPayments=[["Code","Pay Date","Payment amount"],["BCA","2016/12/12",16.8],["DDD","2015/12/13",0],["ABC ","2016/12/31",12],["BBB","2015/12/12",0]]
-$divPaymentHistory=[["Code","Date","Payment amount"],["DDD","2015/12/13",4],["BBB","2015/12/12",12.36]]
-$holdings=[["Code","Number of Stocks"],["ABC ","100"]]
-$history=[["Date","Type","Details"],["2016/03/11","Buy","Code: ABC  Num Shares: 100 Price: 10 Franking: 43 Dividend: 12"],["2016/03/11","Buy","Code: BBB Num Shares: 103 Price($): 123 Franking(%): 100 Dividend(CPS): 12"],["2016/03/11","Sell","Code: BBB Price($): 1"]]
+$totalFrankingCredits=537.833828571429
+$currentMoney=1219
+$pendingDivPayments=[["Code","Pay Date","Payment amount"],["","",0],["ABC","2015/14/123",0],["ABC","2016/12/04",1.44],["aaa","2015",0],["aaa","2015",0],["aaa","2015",0]]
+$divPaymentHistory=[["Code","Date","Payment amount"],["ABC","2015/14/123",1.44],["aaa","2015",12.3],["aaa","2015",12.3],["aaa","2015",1230]]
+$holdings=[["Code","Number of Stocks"],["","12"],["ABC","12"],["ABC","12"],["aaa","123"],["aaa","123"],["aaa","123"]]
+$history=[["Date","Type","Details"],["2016/03/22","Buy","Code:  Num Shares: 12 Price($): 12 Franking(%):  Dividend(CPS): "],["2016/03/22","Buy","Code: ABC Num Shares: 12 Price($): 10 Franking(%): 12 Dividend(CPS): 12"],["2016/03/22","Buy","Code: ABC Num Shares: 12 Price($): 10 Franking(%): 12 Dividend(CPS): 12"],["2016/03/22","Buy","Code: aaa Num Shares: 123 Price($): 12 Franking(%): 100 Dividend(CPS): 10"],["2016/03/22","Buy","Code: aaa Num Shares: 123 Price($): 12 Franking(%): 100 Dividend(CPS): 10"],["2016/03/22","Buy","Code: aaa Num Shares: 123 Price($): 0 Franking(%): 100 Dividend(CPS): 1000"]]
